# netbox_container_plugin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: docs-pages.yml  python-lint.yml  release.yml  validate.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 13-feature-add-support-for-netbox-46.yml  17-feature-use-ruff-for-python-linting-tests.yml  2-provide-documentation-with-screenshots.yml  3-add-contribution.yml  4-use-antsibull-changelog-to-auto-create-changelogs.yml  5-create-release-with-github-actions.yml  6-add-support-for-container-device-redirection.yml  7-add-support-for-group-add.yml
docs/: README.md  containers.md  index.md  infra.md  installation.md  navigation.md  pods.md  troubleshooting.md
netbox_containers/: __init__.py  constants.py  navigation.py  urls.py  utils.py
netbox_containers/api/: urls.py  views.py
netbox_containers/filtersets/: __init__.py  container_secrets.py  containers.py  images.py  mounts.py  network_attachments.py  networks.py  pods.py  secrets.py  volumes.py
netbox_containers/forms/: __init__.py  container_secrets.py  containers.py  images.py  mounts.py  network_attachments.py  networks.py  pods.py  secrets.py  volumes.py
netbox_containers/migrations/: 0001_initial.py  0002_container_add_group.py  0002_network_driver_network_subnet_network_user_and_more.py  0003_container_add_device.py  0003_pod_network.py  0004_remove_pod_network_pod_networks.py  0005_alter_network_options_alter_pod_options_and_more.py  0006_network_prefixes_network_subnets_text.py  0007_remove_network_subnet.py  0008_network_label.py  0009_alter_network_label.py  0010_network_gateway.py  0011_network_comments_pod_comments.py  0018_volume.py  (+28 more)
(+54 files in other folders)
