[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-containers"
version = "0.1.0"
description = "NetBox plugin to manage Podman/Docker container environments"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "René Koch", email = "rkoch@rk-it.at" }
]
requires-python = ">=3.12.0"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/rk-it-at/netbox-containers"
Source = "https://github.com/rk-it-at/netbox-containers"
Issues = "https://github.com/rk-it-at/netbox-containers/issues"

[tool.setuptools.packages.find]
include = ["netbox_containers*"]

[tool.setuptools.package-data]
"*" = ["templates/**/*.html", "static/**/*", "*.txt"]
